app/assets/stylesheets/partials/_content-posts.css.scss
/* ... */
.post-edit {
	
	position: absolute;
	top: 18px;
	right: 10px;
	z-index: 10;
	
	@include media-query-bp($bp3) {
		right: 0px;
	}
	
	a.edit {
		cursor: pointer;
		font-size: 24px;
		position: absolute;
		top: 0px;
		right: 0px;
		
		&:hover {
			text-decoration: none;
			span.icon-edit:before {
				content: "\5d";
			}
		}
	}
	
	.post-edit-options {
		
		// hide until the active class is added
		display: none;
		
		position: relative;
		top: 44px;
		right: 0px;
		background-color: $white;
		border: 1px solid $lightneutralcolor;
		padding: 20px;
		
		// creates the arrow at the top of the box
		&:after { 
			pointer-events: none;
			content: " "; 
			display: block; 
			width: 0; 
			height: 0;
			border-top:    10px solid transparent;
			border-left:   10px solid transparent;
			border-right:  10px solid transparent;
			border-bottom: 10px solid white;
			position: absolute;
			top: -20px;
			right: 1px;
			margin-top: 1px; 
			z-index: 2; 
		}	
		
		&:before { 
			pointer-events: none;
			content: " "; 
			display: block; 
			width: 0; 
			height: 0;
			border-top:    10px solid transparent;
			border-left:   10px solid transparent;
			border-right:  10px solid transparent;
			border-bottom: 10px solid $lightneutralcolor;
			position: absolute;
			top: -20px;
			right: 1px;
			// margin-top: -50px; 
			margin-left: 0px;
			z-index: 1; 
		}	

		ul {
			margin: 0 0 0 0;
			padding: 0 0 0 0;
			
			li {
				@include text-small;
				margin: 0 0 10px 0;
				padding: 0 0 0 0;
				
				line-height: 1em;
				list-style: none;
				&:last-child {
					margin-bottom: 0px;
				}
			}
		}
	}
	
	/*&.edit-active {*/
	&.non-modal {
		a.edit {
			span.icon-edit:before {
				content: "\5d";
			}
		}
		
		.post-edit-options {
			display: block;
		}
		
	}
	
}

.post-content {
	
	padding: 0px 10px 15px 10px;
	
	@include media-query-bp($bp3) {
		padding: 0 0 20px 0;
	}
	
	.post-image {
		position: relative;
		margin-bottom: 15px;
		
		.remove-image {
			// background-color: $white;
			// border-radius : 50%;
			// @include box-shadow(0px 0px 8px rgba(0,0,0,.25));
			// padding: 3px;
			display: none;
			position: absolute;
			top: 10px;
			right: 10px;
			// font-size: 36px;
			// color: $warningcolor;
			// 
			// &:hover {
			// 	text-decoration: none;
			// 	color: lighten($warningcolor, 5%);
			// 	// darken($tertiarycolor, 5%);
			// }
		}
	}
	
	.post-video {
	  margin-bottom: 10px;
		
	  // position: relative;
	  // padding-top: 25px;
	  // // padding-bottom: 67.5%;
	  // padding-bottom: 52.5%;// for 16x9 aspect ratios
	  // height: 0;
	  // margin-bottom: 10px;
	  // overflow: hidden;
	  // 	
	  // &.widescreen { padding-bottom: 57.25%; }
	  // &.vimeo { padding-top: 0; }
	  // &.flex-six { padding-bottom: 51.5%;}
	  // 	
	  // iframe, object, embed, video { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
	  // 	
	}
	
	&.editing {
		
		.text-wrapper, 
                .post-meta,
		.post-video {
			display: none;
		}
		.remove-image {
			display: block;
		}
	}
	
	.post-meta {
		@include clearfix;
		padding: 0 0 0px 0;
		
		@include media-query-bp($bp3) {
			padding: 0 0 0px 0;
		}
	}
	
	.timestamp {
		float: left;
		@include text-xsmall;
		@include text-color-light;
		
		.long-time {
			display: none;
		}
		
		@include media-query-bp($bp3) {
			.long-time {
				display: inline-block;
			}
			.short-time {
				display: none;
			}
		}
	}
	
	.like-count,
	.comment-count {
		float: left;
		@include text-xsmall;
		@include text-color-light;
		margin-left: 10px;
	}
	
	.rating {
		float: right;
		@include text-xsmall;
		@include text-color-light;
		
		.icon-star {
	        position:relative;
			
			&.star-lit {
				color: #fbab20;
				text-shadow: 0px 1px 1px rgba($textcolorlight, .5);
			}
			
		    &:after {
		        content: '';
		        position:absolute;
		        display:block;
		        top:0;
		        left:0;
		        height:100%;
		        width:100%;
		        background: -moz-linear-gradient(	top,  rgba(255,255,255,.5) 0%, rgba(255,255,255,0) 100%);
		        background: -webkit-linear-gradient(top,  rgba(255,255,255,.5) 0%, rgba(255,255,255,0) 100%);
		        background: -o-linear-gradient(		top,  rgba(255,255,255,.5) 0%, rgba(255,255,255,0) 100%);
		        background: -ms-linear-gradient(	top,  rgba(255,255,255,.5) 0%, rgba(255,255,255,0) 100%);
		        background: linear-gradient(		top,  rgba(255,255,255,.5) 0%, rgba(255,255,255,0) 100%);
		        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
		    }
		}
	}
}
/* ... */

